# pegasus

./: README.md
pegasus/: CMakeLists.txt  package.xml
pegasus/include/pegasus/: controller_base.h  estimator_base.h  gps_struct.h  kalman_filter.h  luenberger_observer.h  pd.h  (+3 more)
pegasus/msg/: Barometer.msg  DesiredControl.msg  GPS.msg  MotorCommand2.msg  MotorCommand3.msg  MotorCommand4.msg  MotorCommand6.msg  MotorCommand8.msg  RX8.msg  Sonar.msg  VehicleState.msg
pegasus/param/: controller_params.yaml  estimator_params.yaml  initial_conditions.yaml  rx_settings.yaml  vehicle_description.yaml
pegasus/src/: controller_base.cpp  estimator_base.cpp  kalman_filter.cpp  luenberger_observer.cpp  pd.cpp  pid.cpp
pegasus_sim/: CMakeLists.txt  package.xml
pegasus_sim/include/: equations_of_motion.h
pegasus_sim/include/pegasus_sim/: dryden.h  dynamic_model.h  equations_of_motion_base.h  flat_momentum.h  forces_and_moments.h  forces_and_moments_base.h  sensor_models.h  sensors_base.h  simple_dynamic_model.h  wind_base.h
pegasus_sim/launch/: mov_model.launch  plot_control.launch  plot_estimates.launch  rx.launch  use_estimates.launch  use_truth.launch  viz_model.launch
pegasus_sim/msg/: Wind.msg
pegasus_sim/param/: simulation_params.yaml
pegasus_sim/src/: dryden.cpp  dynamic_model.cpp  equations_of_motion.cpp  equations_of_motion_base.cpp  flat_momentum.cpp  forces_and_moments.cpp  forces_and_moments_base.cpp  sensor_models.cpp  sensors_base.cpp  simple_dynamic_model.cpp  wind_base.cpp
pegasus_sim/viz/: qcopter.dae  qcopter.rviz  qcopter.urdf  viz_model.rviz
