<?xml version="1.0"?>
<package>
  <name>pegasus_sim</name>
  <version>0.0.0</version>
  <description>The pegasus_sim package</description>
  <maintainer email="austinhurst@msn.com">Austin Hurst</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  
  <export>
  </export>
</package>
